Use Java 8 for JDBC driver target compatibility version (#82274) (#82325)